library/src/libqaccessible.h

typedef QAccessible::State QAccessible__State;
typedef struct QAccessibleActionInterface QAccessibleActionInterface;
typedef struct QAccessibleEvent QAccessibleEvent;
typedef struct QAccessibleHyperlinkInterface QAccessibleHyperlinkInterface;
typedef struct QAccessibleImageInterface QAccessibleImageInterface;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleStateChangeEvent QAccessibleStateChangeEvent;
typedef struct QAccessibleTableInterface QAccessibleTableInterface;
typedef struct QAccessibleTableModelChangeEvent QAccessibleTableModelChangeEvent;
typedef struct QAccessibleTextCursorEvent QAccessibleTextCursorEvent;
typedef struct QAccessibleTextInsertEvent QAccessibleTextInsertEvent;
typedef struct QAccessibleTextSelectionEvent QAccessibleTextSelectionEvent;
typedef struct QAccessible__State QAccessible__State;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
QAccessibleInterface* QAccessibleTableInterface_Caption(const QAccessibleTableInterface* self);
QAccessibleInterface* QAccessibleTableInterface_Summary(const QAccessibleTableInterface* self);
QAccessibleInterface* QAccessibleTableInterface_CellAt(const QAccessibleTableInterface* self, int row, int column);
int QAccessibleTableInterface_SelectedCellCount(const QAccessibleTableInterface* self);
libqt_list /* of QAccessibleInterface* */ QAccessibleTableInterface_SelectedCells(const QAccessibleTableInterface* self);
libqt_string QAccessibleTableInterface_ColumnDescription(const QAccessibleTableInterface* self, int column);
libqt_string QAccessibleTableInterface_RowDescription(const QAccessibleTableInterface* self, int row);
int QAccessibleTableInterface_SelectedColumnCount(const QAccessibleTableInterface* self);
int QAccessibleTableInterface_SelectedRowCount(const QAccessibleTableInterface* self);
int QAccessibleTableInterface_ColumnCount(const QAccessibleTableInterface* self);
int QAccessibleTableInterface_RowCount(const QAccessibleTableInterface* self);
libqt_list /* of int */ QAccessibleTableInterface_SelectedColumns(const QAccessibleTableInterface* self);
libqt_list /* of int */ QAccessibleTableInterface_SelectedRows(const QAccessibleTableInterface* self);
bool QAccessibleTableInterface_IsColumnSelected(const QAccessibleTableInterface* self, int column);
bool QAccessibleTableInterface_IsRowSelected(const QAccessibleTableInterface* self, int row);
bool QAccessibleTableInterface_SelectRow(QAccessibleTableInterface* self, int row);
bool QAccessibleTableInterface_SelectColumn(QAccessibleTableInterface* self, int column);
bool QAccessibleTableInterface_UnselectRow(QAccessibleTableInterface* self, int row);
bool QAccessibleTableInterface_UnselectColumn(QAccessibleTableInterface* self, int column);
void QAccessibleTableInterface_ModelChange(QAccessibleTableInterface* self, QAccessibleTableModelChangeEvent* event);
libqt_string QAccessibleActionInterface_Tr(const char* sourceText);
libqt_list /* of libqt_string */ QAccessibleActionInterface_ActionNames(const QAccessibleActionInterface* self);
libqt_string QAccessibleActionInterface_LocalizedActionName(const QAccessibleActionInterface* self, libqt_string name);
libqt_string QAccessibleActionInterface_LocalizedActionDescription(const QAccessibleActionInterface* self, libqt_string name);
void QAccessibleActionInterface_DoAction(QAccessibleActionInterface* self, libqt_string actionName);
libqt_list /* of libqt_string */ QAccessibleActionInterface_KeyBindingsForAction(const QAccessibleActionInterface* self, libqt_string actionName);
libqt_string QAccessibleActionInterface_PressAction();
libqt_string QAccessibleActionInterface_IncreaseAction();
libqt_string QAccessibleActionInterface_DecreaseAction();
libqt_string QAccessibleActionInterface_ShowMenuAction();
libqt_string QAccessibleActionInterface_SetFocusAction();
libqt_string QAccessibleActionInterface_ToggleAction();
libqt_string QAccessibleActionInterface_ScrollLeftAction();
libqt_string QAccessibleActionInterface_ScrollRightAction();
libqt_string QAccessibleActionInterface_ScrollUpAction();
libqt_string QAccessibleActionInterface_ScrollDownAction();
libqt_string QAccessibleActionInterface_NextPageAction();
libqt_string QAccessibleActionInterface_PreviousPageAction();
void QAccessibleActionInterface_OperatorAssign(QAccessibleActionInterface* self, QAccessibleActionInterface* param1);
libqt_string QAccessibleActionInterface_Tr2(const char* sourceText, const char* disambiguation);
libqt_string QAccessibleActionInterface_Tr3(const char* sourceText, const char* disambiguation, int n);
libqt_string QAccessibleImageInterface_ImageDescription(const QAccessibleImageInterface* self);
QSize* QAccessibleImageInterface_ImageSize(const QAccessibleImageInterface* self);
QPoint* QAccessibleImageInterface_ImagePosition(const QAccessibleImageInterface* self);
void QAccessibleImageInterface_OperatorAssign(QAccessibleImageInterface* self, QAccessibleImageInterface* param1);
libqt_string QAccessibleHyperlinkInterface_Anchor(const QAccessibleHyperlinkInterface* self);
libqt_string QAccessibleHyperlinkInterface_AnchorTarget(const QAccessibleHyperlinkInterface* self);
int QAccessibleHyperlinkInterface_StartIndex(const QAccessibleHyperlinkInterface* self);
int QAccessibleHyperlinkInterface_EndIndex(const QAccessibleHyperlinkInterface* self);
bool QAccessibleHyperlinkInterface_IsValid(const QAccessibleHyperlinkInterface* self);
void QAccessibleHyperlinkInterface_OperatorAssign(QAccessibleHyperlinkInterface* self, QAccessibleHyperlinkInterface* param1);
QAccessibleEvent* QAccessibleEvent_new(QObject* obj, int typ);
QAccessibleEvent* QAccessibleEvent_new2(QAccessibleInterface* iface, int typ);
int QAccessibleEvent_Type(const QAccessibleEvent* self);
QObject* QAccessibleEvent_Object(const QAccessibleEvent* self);
unsigned int QAccessibleEvent_UniqueId(const QAccessibleEvent* self);
void QAccessibleEvent_SetChild(QAccessibleEvent* self, int chld);
int QAccessibleEvent_Child(const QAccessibleEvent* self);
QAccessibleInterface* QAccessibleEvent_AccessibleInterface(const QAccessibleEvent* self);
QAccessibleStateChangeEvent* QAccessibleStateChangeEvent_new(QObject* obj, QAccessible__State* state);
QAccessibleStateChangeEvent* QAccessibleStateChangeEvent_new2(QAccessibleInterface* iface, QAccessible__State* state);
QAccessible__State* QAccessibleStateChangeEvent_ChangedStates(const QAccessibleStateChangeEvent* self);
QAccessibleTextCursorEvent* QAccessibleTextCursorEvent_new(QObject* obj, int cursorPos);
QAccessibleTextCursorEvent* QAccessibleTextCursorEvent_new2(QAccessibleInterface* iface, int cursorPos);
void QAccessibleTextCursorEvent_SetCursorPosition(QAccessibleTextCursorEvent* self, int position);
int QAccessibleTextCursorEvent_CursorPosition(const QAccessibleTextCursorEvent* self);
QAccessibleTextSelectionEvent* QAccessibleTextSelectionEvent_new(QObject* obj, int start, int end);
QAccessibleTextSelectionEvent* QAccessibleTextSelectionEvent_new2(QAccessibleInterface* iface, int start, int end);
void QAccessibleTextSelectionEvent_SetSelection(QAccessibleTextSelectionEvent* self, int start, int end);
int QAccessibleTextSelectionEvent_SelectionStart(const QAccessibleTextSelectionEvent* self);
int QAccessibleTextSelectionEvent_SelectionEnd(const QAccessibleTextSelectionEvent* self);
QAccessibleTextInsertEvent* QAccessibleTextInsertEvent_new(QObject* obj, int position, libqt_string text);
QAccessibleTextInsertEvent* QAccessibleTextInsertEvent_new2(QAccessibleInterface* iface, int position, libqt_string text);
libqt_string QAccessibleTextInsertEvent_TextInserted(const QAccessibleTextInsertEvent* self);
int QAccessibleTextInsertEvent_ChangePosition(const QAccessibleTextInsertEvent* self);