src/libqaccessible.bf

public struct QAccessibleTableInterface
{
	[LinkName("QAccessibleTableInterface_Caption")]
	public static extern QAccessibleInterface QAccessibleTableInterface_Caption(void* c_this);
	[LinkName("QAccessibleTableInterface_Summary")]
	public static extern QAccessibleInterface QAccessibleTableInterface_Summary(void* c_this);
	[LinkName("QAccessibleTableInterface_CellAt")]
	public static extern QAccessibleInterface QAccessibleTableInterface_CellAt(void* c_this, int32 row, int32 column);
	[LinkName("QAccessibleTableInterface_SelectedCellCount")]
	public static extern int32 QAccessibleTableInterface_SelectedCellCount(void* c_this);
	[LinkName("QAccessibleTableInterface_SelectedCells")]
	public static extern QAccessibleInterface[] QAccessibleTableInterface_SelectedCells(void* c_this);
	[LinkName("QAccessibleTableInterface_ColumnDescription")]
	public static extern char8[] QAccessibleTableInterface_ColumnDescription(void* c_this, int32 column);
	[LinkName("QAccessibleTableInterface_RowDescription")]
	public static extern char8[] QAccessibleTableInterface_RowDescription(void* c_this, int32 row);
	[LinkName("QAccessibleTableInterface_SelectedColumnCount")]
	public static extern int32 QAccessibleTableInterface_SelectedColumnCount(void* c_this);
	[LinkName("QAccessibleTableInterface_SelectedRowCount")]
	public static extern int32 QAccessibleTableInterface_SelectedRowCount(void* c_this);
	[LinkName("QAccessibleTableInterface_ColumnCount")]
	public static extern int32 QAccessibleTableInterface_ColumnCount(void* c_this);
	[LinkName("QAccessibleTableInterface_RowCount")]
	public static extern int32 QAccessibleTableInterface_RowCount(void* c_this);
	[LinkName("QAccessibleTableInterface_SelectedColumns")]
	public static extern int32[] QAccessibleTableInterface_SelectedColumns(void* c_this);
	[LinkName("QAccessibleTableInterface_SelectedRows")]
	public static extern int32[] QAccessibleTableInterface_SelectedRows(void* c_this);
	[LinkName("QAccessibleTableInterface_IsColumnSelected")]
	public static extern bool QAccessibleTableInterface_IsColumnSelected(void* c_this, int32 column);
	[LinkName("QAccessibleTableInterface_IsRowSelected")]
	public static extern bool QAccessibleTableInterface_IsRowSelected(void* c_this, int32 row);
	[LinkName("QAccessibleTableInterface_SelectRow")]
	public static extern bool QAccessibleTableInterface_SelectRow(void* c_this, int32 row);
	[LinkName("QAccessibleTableInterface_SelectColumn")]
	public static extern bool QAccessibleTableInterface_SelectColumn(void* c_this, int32 column);
	[LinkName("QAccessibleTableInterface_UnselectRow")]
	public static extern bool QAccessibleTableInterface_UnselectRow(void* c_this, int32 row);
	[LinkName("QAccessibleTableInterface_UnselectColumn")]
	public static extern bool QAccessibleTableInterface_UnselectColumn(void* c_this, int32 column);
	[LinkName("QAccessibleTableInterface_ModelChange")]
	public static extern void QAccessibleTableInterface_ModelChange(void* c_this, QAccessibleTableModelChangeEvent event);
	[LinkName("QAccessibleTableInterface_OperatorAssign")]
	public static extern void QAccessibleTableInterface_OperatorAssign(void* c_this, QAccessibleTableInterface param1);
}
public struct QAccessibleActionInterface
{
	[LinkName("QAccessibleActionInterface_Tr")]
	public static extern char8[] QAccessibleActionInterface_Tr(char8[] sourceText);
	[LinkName("QAccessibleActionInterface_ActionNames")]
	public static extern char8[][] QAccessibleActionInterface_ActionNames(void* c_this);
	[LinkName("QAccessibleActionInterface_LocalizedActionName")]
	public static extern char8[] QAccessibleActionInterface_LocalizedActionName(void* c_this, char8[] name);
	[LinkName("QAccessibleActionInterface_LocalizedActionDescription")]
	public static extern char8[] QAccessibleActionInterface_LocalizedActionDescription(void* c_this, char8[] name);
	[LinkName("QAccessibleActionInterface_DoAction")]
	public static extern void QAccessibleActionInterface_DoAction(void* c_this, char8[] actionName);
	[LinkName("QAccessibleActionInterface_KeyBindingsForAction")]
	public static extern char8[][] QAccessibleActionInterface_KeyBindingsForAction(void* c_this, char8[] actionName);
	[LinkName("QAccessibleActionInterface_PressAction")]
	public static extern char8[] QAccessibleActionInterface_PressAction();
	[LinkName("QAccessibleActionInterface_IncreaseAction")]
	public static extern char8[] QAccessibleActionInterface_IncreaseAction();
	[LinkName("QAccessibleActionInterface_DecreaseAction")]
	public static extern char8[] QAccessibleActionInterface_DecreaseAction();
	[LinkName("QAccessibleActionInterface_ShowMenuAction")]
	public static extern char8[] QAccessibleActionInterface_ShowMenuAction();
	[LinkName("QAccessibleActionInterface_SetFocusAction")]
	public static extern char8[] QAccessibleActionInterface_SetFocusAction();
	[LinkName("QAccessibleActionInterface_ToggleAction")]
	public static extern char8[] QAccessibleActionInterface_ToggleAction();
	[LinkName("QAccessibleActionInterface_ScrollLeftAction")]
	public static extern char8[] QAccessibleActionInterface_ScrollLeftAction();
	[LinkName("QAccessibleActionInterface_ScrollRightAction")]
	public static extern char8[] QAccessibleActionInterface_ScrollRightAction();
	[LinkName("QAccessibleActionInterface_ScrollUpAction")]
	public static extern char8[] QAccessibleActionInterface_ScrollUpAction();
	[LinkName("QAccessibleActionInterface_ScrollDownAction")]
	public static extern char8[] QAccessibleActionInterface_ScrollDownAction();
	[LinkName("QAccessibleActionInterface_NextPageAction")]
	public static extern char8[] QAccessibleActionInterface_NextPageAction();
	[LinkName("QAccessibleActionInterface_PreviousPageAction")]
	public static extern char8[] QAccessibleActionInterface_PreviousPageAction();
	[LinkName("QAccessibleActionInterface_OperatorAssign")]
	public static extern void QAccessibleActionInterface_OperatorAssign(void* c_this, QAccessibleActionInterface param1);
	[LinkName("QAccessibleActionInterface_Tr2")]
	public static extern char8[] QAccessibleActionInterface_Tr2(char8[] sourceText, char8[] disambiguation);
	[LinkName("QAccessibleActionInterface_Tr3")]
	public static extern char8[] QAccessibleActionInterface_Tr3(char8[] sourceText, char8[] disambiguation, int32 n);
}
public struct QAccessibleImageInterface
{
	[LinkName("QAccessibleImageInterface_ImageDescription")]
	public static extern char8[] QAccessibleImageInterface_ImageDescription(void* c_this);
	[LinkName("QAccessibleImageInterface_ImageSize")]
	public static extern QSize QAccessibleImageInterface_ImageSize(void* c_this);
	[LinkName("QAccessibleImageInterface_ImagePosition")]
	public static extern QPoint QAccessibleImageInterface_ImagePosition(void* c_this);
	[LinkName("QAccessibleImageInterface_OperatorAssign")]
	public static extern void QAccessibleImageInterface_OperatorAssign(void* c_this, QAccessibleImageInterface param1);
}
public struct QAccessibleHyperlinkInterface
{
	[LinkName("QAccessibleHyperlinkInterface_Anchor")]
	public static extern char8[] QAccessibleHyperlinkInterface_Anchor(void* c_this);
	[LinkName("QAccessibleHyperlinkInterface_AnchorTarget")]
	public static extern char8[] QAccessibleHyperlinkInterface_AnchorTarget(void* c_this);
	[LinkName("QAccessibleHyperlinkInterface_StartIndex")]
	public static extern int32 QAccessibleHyperlinkInterface_StartIndex(void* c_this);
	[LinkName("QAccessibleHyperlinkInterface_EndIndex")]
	public static extern int32 QAccessibleHyperlinkInterface_EndIndex(void* c_this);
	[LinkName("QAccessibleHyperlinkInterface_IsValid")]
	public static extern bool QAccessibleHyperlinkInterface_IsValid(void* c_this);
	[LinkName("QAccessibleHyperlinkInterface_OperatorAssign")]
	public static extern void QAccessibleHyperlinkInterface_OperatorAssign(void* c_this, QAccessibleHyperlinkInterface param1);
}
public struct QAccessibleEvent
{
	[LinkName("QAccessibleEvent_new")]
	public static extern void* QAccessibleEvent_new(QObject obj, int64 typ);
	[LinkName("QAccessibleEvent_new2")]
	public static extern void* QAccessibleEvent_new2(QAccessibleInterface iface, int64 typ);
	[LinkName("QAccessibleEvent_Type")]
	public static extern int64 QAccessibleEvent_Type(void* c_this);
	[LinkName("QAccessibleEvent_Object")]
	public static extern QObject QAccessibleEvent_Object(void* c_this);
	[LinkName("QAccessibleEvent_UniqueId")]
	public static extern uint32 QAccessibleEvent_UniqueId(void* c_this);
	[LinkName("QAccessibleEvent_SetChild")]
	public static extern void QAccessibleEvent_SetChild(void* c_this, int32 chld);
	[LinkName("QAccessibleEvent_Child")]
	public static extern int32 QAccessibleEvent_Child(void* c_this);
	[LinkName("QAccessibleEvent_AccessibleInterface")]
	public static extern QAccessibleInterface QAccessibleEvent_AccessibleInterface(void* c_this);
}
public struct QAccessibleStateChangeEvent
{
	[LinkName("QAccessibleStateChangeEvent_new")]
	public static extern void* QAccessibleStateChangeEvent_new(QObject obj, QAccessible__State state);
	[LinkName("QAccessibleStateChangeEvent_new2")]
	public static extern void* QAccessibleStateChangeEvent_new2(QAccessibleInterface iface, QAccessible__State state);
	[LinkName("QAccessibleStateChangeEvent_ChangedStates")]
	public static extern QAccessible__State QAccessibleStateChangeEvent_ChangedStates(void* c_this);
}
public struct QAccessibleTextCursorEvent
{
	[LinkName("QAccessibleTextCursorEvent_new")]
	public static extern void* QAccessibleTextCursorEvent_new(QObject obj, int32 cursorPos);
	[LinkName("QAccessibleTextCursorEvent_new2")]
	public static extern void* QAccessibleTextCursorEvent_new2(QAccessibleInterface iface, int32 cursorPos);
	[LinkName("QAccessibleTextCursorEvent_SetCursorPosition")]
	public static extern void QAccessibleTextCursorEvent_SetCursorPosition(void* c_this, int32 position);
	[LinkName("QAccessibleTextCursorEvent_CursorPosition")]
	public static extern int32 QAccessibleTextCursorEvent_CursorPosition(void* c_this);
}
public struct QAccessibleTextSelectionEvent
{
	[LinkName("QAccessibleTextSelectionEvent_new")]
	public static extern void* QAccessibleTextSelectionEvent_new(QObject obj, int32 start, int32 end);
	[LinkName("QAccessibleTextSelectionEvent_new2")]
	public static extern void* QAccessibleTextSelectionEvent_new2(QAccessibleInterface iface, int32 start, int32 end);
	[LinkName("QAccessibleTextSelectionEvent_SetSelection")]
	public static extern void QAccessibleTextSelectionEvent_SetSelection(void* c_this, int32 start, int32 end);
	[LinkName("QAccessibleTextSelectionEvent_SelectionStart")]
	public static extern int32 QAccessibleTextSelectionEvent_SelectionStart(void* c_this);
	[LinkName("QAccessibleTextSelectionEvent_SelectionEnd")]
	public static extern int32 QAccessibleTextSelectionEvent_SelectionEnd(void* c_this);
}
public struct QAccessibleTextInsertEvent
{
	[LinkName("QAccessibleTextInsertEvent_new")]
	public static extern void* QAccessibleTextInsertEvent_new(QObject obj, int32 position, char8[] text);
	[LinkName("QAccessibleTextInsertEvent_new2")]
	public static extern void* QAccessibleTextInsertEvent_new2(QAccessibleInterface iface, int32 position, char8[] text);
	[LinkName("QAccessibleTextInsertEvent_TextInserted")]
	public static extern char8[] QAccessibleTextInsertEvent_TextInserted(void* c_this);
	[LinkName("QAccessibleTextInsertEvent_ChangePosition")]
	public static extern int32 QAccessibleTextInsertEvent_ChangePosition(void* c_this);
}
